# array

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cxx
src/: array.hxx  index_array.hxx  library.cpp
src/internal/: info.hxx  numeric.cxx  numeric.hxx  size_t.hxx  type_traits.hpp  type_traits.hxx  utility.hxx
test/: CMakeLists.txt  test.cxx
